testsuite/tests/checks/object_decl_out_of_order/test.out
pack.adb:5:4: error: object declaration after program unit declaration
5 |    I : Integer;    --  FLAG
  |    ^ 

